--- a/slides/Slides.Rmd
+++ b/slides/Slides.Rmd
@@ -33,10 +33,10 @@ meta() %>%
     description = "Getting familiar with the use of Git & GitHub in RStudio",
     generator = "xaringan and remark.js"
   ) %>% 
-  meta_name("github-repo" = "MounaBelaid/First-Steps-in-Learning-the-use-of-Git-and-GitHub-in-RStudio") %>% 
+  meta_name("github-repo" = "MounaBelaid/First-Steps-in-Learning-the-Use-of-Git-and-GitHub-in-RStudio") %>% 
   meta_social(
     title = "First Steps in Learning the Use of Git & GitHub in RStudio",
-    url = "https://mounabelaid.github.io/First-Steps-in-Learning-the-use-of-Git-and-GitHub-in-RStudio/",
+    url = "https://mounabelaid.github.io/First-Steps-in-Learning-the-Use-of-Git-and-GitHub-in-RStudio/",
     image = "",
     image_alt = paste(
       "Title slide of First Steps in Learning the Use of Git & GitHub in RStudio",
@@ -109,7 +109,7 @@ class: about-me-slide, inverse, middle, center
 ---
 layout: true
 
-<a class="footer-link" href="https://bit.ly/3oqYM2K">bit.ly/3oqYM2K &mdash; Mouna Belaid</a>
+<a class="footer-link" href="https://bit.ly/3B5oZcv">bit.ly/3B5oZcv &mdash; Mouna Belaid</a>
 
 <!-- this adds the link footer to all slides, depends on footer-link class in css-->
 ---
