--- a/slides/Slides.Rmd
+++ b/slides/Slides.Rmd
@@ -147,7 +147,7 @@ layout: true
 --
 
 .pull-left-narrow[
-.center[<img src="img/r-rstudio.png" width="180%"/>]]
+.center[<img src="img/r-rstudio.PNG" width="180%"/>]]
 .pull-right-wide[### .black[R and RStudio installed]]
 
 --
@@ -247,7 +247,7 @@ template: question
 --
 
 .pull-left-narrow[
-.center[<img src="img/Github.png" width="50%"/>]]
+.center[<img src="img/github.png" width="50%"/>]]
 .pull-right-wide[### .black[GitHub is the most popular hosting service for collaborating on code using Git. Other hosting services include Bitbucket, and Gitlab.]]
 
 --
